fdo#81944 fdo#82107: writerfilter: RTF import: don't drop fonts in stylesheet

The font definitions in the style sheet meet an untimely death in
StyleSheetTable::lcl_sprm(), which special-cases LN_EG_RPrBase_rFonts,
routing it into TblStylePrHandler.

Avoid this by sending style entries to the domain mapper in the same way
as the OOXML tokenizer, i.e., with paragraph and run properties nested
below CT_Style_pPr/rPr.

This reveals that the CT_Style_basedOn was wrongly handled as paragraph
property.

(cherry picked from commit f8e8e476aa0a5576234dbb4daac9dc299e044e61)

Conflicts:
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Change-Id: Ic724ba48fe36bf782b1b430bdafdb1df480d5ad3